// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldFile__FileName /> should render correctly 1`] = `
.c0 {
  padding: 0 15px;
  color: ;
}

<div
  className="c0"
/>
`;

exports[`<FieldFile__FilePicker /> should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
  height: 32px;
  border: 1px solid;
  border-right: 0;
  border-color: #a6a6a6;
  cursor: pointer;
}

.c0:hover {
  border-color: #333333;
}

<Dropzone
  className="c0"
  disableClick={false}
  disablePreview={false}
  disabled={false}
  maxSize={Infinity}
  minSize={0}
  multiple={true}
  preventDropOnDocument={true}
/>
`;

exports[`FieldFile should render correctly 1`] = `
<div>
  <CustomizedLabel
    label="test label"
    required={false}
  >
    test label
  </CustomizedLabel>
  <FieldFile__FilePicker
    disabled={false}
    name="test name"
    onDrop={[Function]}
    type="file"
  >
    <FieldFile__FileName
      disabled={true}
    >
      Select a file to upload
    </FieldFile__FileName>
    <CustomizedDefaultButton
      disabled={false}
      primary={true}
      text="Attach File"
      type="button"
    />
  </FieldFile__FilePicker>
</div>
`;

exports[`FieldFile should render properly when disabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
  height: 32px;
  border: 1px solid;
  border-right: 0;
  border-color: #eaeaea;
  cursor: pointer;
}

<Dropzone
  className="c0"
  data-error={null}
  disableClick={false}
  disablePreview={false}
  disabled={true}
  maxSize={Infinity}
  minSize={0}
  multiple={true}
  preventDropOnDocument={true}
/>
`;

exports[`FieldFile should render properly when disabled and errors 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
  height: 32px;
  border: 1px solid;
  border-right: 0;
  border-color: #eaeaea;
  cursor: pointer;
}

<Dropzone
  className="c0"
  data-error="test error"
  disableClick={false}
  disablePreview={false}
  disabled={true}
  maxSize={Infinity}
  minSize={0}
  multiple={true}
  preventDropOnDocument={true}
/>
`;

exports[`FieldFile should render properly when errors 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
  height: 32px;
  border: 1px solid;
  border-right: 0;
  border-color: #a80000;
  cursor: pointer;
}

.c0:hover {
  border-color: #333333;
}

<Dropzone
  className="c0"
  data-error="test error"
  disableClick={false}
  disablePreview={false}
  disabled={false}
  maxSize={Infinity}
  minSize={0}
  multiple={true}
  preventDropOnDocument={true}
/>
`;

exports[`FieldFile should render properly when not disabled or errors 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-between;
  -webkit-justify-content: space-between;
  -ms-flex-pack: space-between;
  justify-content: space-between;
  height: 32px;
  border: 1px solid;
  border-right: 0;
  border-color: #a6a6a6;
  cursor: pointer;
}

.c0:hover {
  border-color: #333333;
}

<Dropzone
  className="c0"
  data-error={null}
  disableClick={false}
  disablePreview={false}
  disabled={false}
  maxSize={Infinity}
  minSize={0}
  multiple={true}
  preventDropOnDocument={true}
/>
`;

exports[`FileName should render properly when disabled 1`] = `
.c0 {
  padding: 0 15px;
  color: #a6a6a6;
}

<div
  className="c0"
  disabled={true}
/>
`;

exports[`FileName should render properly when not disabled 1`] = `
.c0 {
  padding: 0 15px;
  color: ;
}

<div
  className="c0"
  disabled={false}
/>
`;
